# impe-kun

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  archive_maybe.bt  convmodel.py  ggr-crypt.sln  gmd.bt  model.bt
ggr-crypt/: CMakeLists.txt  ggr-crypt.vcxproj  ggr-crypt.vcxproj.filters
ggr-crypt/inc/: crypt.hpp
ggr-crypt/src/: main.cpp
packer/: CMakeLists.txt  packer.vcxproj  packer.vcxproj.filters
packer/src/: main.cpp
patcher/: CMakeLists.txt  patcher.vcxproj  patcher.vcxproj.filters
patcher/src/: dllmain.cpp  readregs.asm
qt_thing/: main.py
